data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4086.wast
;; 5. **Type Index Not Present Test**:    - **Description**: Use a `typeidx` in `call_indirect` that isn’t defined in the module, leading to a type index not found trap.    - **Constraint**: Ensure validity of type index.    - **Unreachable Code**: The trap for undefined type index will prevent 'unreachable' code execution.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 0 funcref)
    (func (result i32)
      (call_indirect (type 1) (i32.const 0) (i32.const 0))
    )
  )
  "unknown type"
)